--- a/home.html
+++ b/home.html
@@ -20,20 +20,25 @@
       <br>
 
       <div class="text-center">
-        <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Tables</button></a>
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+        <a href="/view"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Tables</button></a>
+        <a href="/add"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
       </div>
 
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a>
+        <p><a href="/api/view">API Table Link</a> | <a href="/api/waitlist">API Wait List</a>
       </div>
     </footer>
 
   </div>
 
+<script>
+  //eventlistener for add reservations
+  //eventlistener for view reservations
 
+
+</script>
 </body>
 </html>
